21-agentic-workflow: Use immutable list